-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: core-libs
-
b03
-
windows
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8214638 | 8u211 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
| JDK-8207195 | 8u202 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
| JDK-8220984 | emb-8u211 | Ivan Gerasimov | P4 | Resolved | Fixed | master |
File src/java.base/windows/native/libjava/io_util_md.c
In pathToNTPath() a pair of macros WITH_UNICODE_STRING / END_UNICODE_STRING is used.
The former calls (*env)->GetStringChars() to acquire the string array, and the later calls (*env)->ReleaseStringChars().
Within this block memory is allocated with malloc(), and if that fails, we return from the pathToNTPath() without releasing the string array.
In pathToNTPath() a pair of macros WITH_UNICODE_STRING / END_UNICODE_STRING is used.
The former calls (*env)->GetStringChars() to acquire the string array, and the later calls (*env)->ReleaseStringChars().
Within this block memory is allocated with malloc(), and if that fails, we return from the pathToNTPath() without releasing the string array.
- backported by
-
JDK-8207195 Memory leak when malloc fails within WITH_UNICODE_STRING block
-
- Resolved
-
-
JDK-8214638 Memory leak when malloc fails within WITH_UNICODE_STRING block
-
- Resolved
-
-
JDK-8220984 Memory leak when malloc fails within WITH_UNICODE_STRING block
-
- Resolved
-