8207060: Memory leak when malloc fails within WITH_UNICODE_STRING block

Reviewed-by: vtewari, rriggs